[package]
name = "pipeline"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
reqwest ={ version = "0.11.13", features = ["blocking", "json"] }
serde = {version = "1.0.152", features = ["derive"]}
serde_derive = "1.0.152"
serde_json = "1.0.91"
